force-app/main/default/objects/CYP_to_Shift__c/CYP_to_Shift__c.object-meta.xml
<CustomObject>
    <label>CYP to Shift</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>CYP to Shift Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CYP to Shifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>