force-app/main/default/objects/CYP_to_Shift__c/fields/Charge_Rate__c.field-meta.xml
<CustomField>
    <fullName>Charge_Rate__c</fullName>
    <formula>CYP_to_Job__r.Charge_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>