force-app/main/default/objects/CYP_to_Shift__c/fields/Child_Young_Person_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Child_Young_Person_Reference_ID__c</fullName>
    <formula>HYPERLINK(
    &quot;/&quot; &amp; CYP_to_Job__r.Child_Young_Person__r.Id,
 CYP_to_Job__r.Child_Young_Person__r.Reference_ID__c 				
)</formula>
    <label>Child / Young Person Reference ID</label>
    <type>Text</type>
</CustomField>