force-app/main/default/objects/CYP_to_Shift__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CYP to Shifts</relationshipLabel>
    <relationshipName>CYP_to_Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>