force-app/main/default/objects/CYP_to_Shift__c/fields/CYP_to_Job__c.field-meta.xml
<CustomField>
    <fullName>CYP_to_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CYP to Job</label>
    <referenceTo>CYP_to_Job__c</referenceTo>
    <relationshipLabel>CYP to Shifts</relationshipLabel>
    <relationshipName>CYP_to_Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>