force-app/main/default/objects/CYP_to_Shift__c/fields/Shift_Date__c.field-meta.xml
<CustomField>
    <fullName>Shift_Date__c</fullName>
    <formula>Shift__r.sirenum__Shift_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shift Date</label>
    <type>Date</type>
</CustomField>